Mon Aug 13 21:18:55 EDT 2007 J Phelps <godless@users.sf.net>
	* mdi_main_window.cpp: Changed all occurences of
	action->addTo(menu) to menu->addAction(action).
	* mdi_main_window.cpp(newDoc): Added the (now required) call to
	ws->addWindow(w) which officially makes the new sub-window "w"
	a child of the QWorkspace object "ws". This revives most of the
	keyboard functionality that was lost with Revision 100.

	It is observed that the apparent lack of cursor-control
	in the Pattern Editor (F2) is caused by Qt4's refusal to
	perform paint operations outside of the context of a call by
	Qt to paintEvent(). Covering and uncovering the window will
	reveal all the cursor movement that has been going on in the
	interim. This means that a lot of widgets need to be heavily
	modified to conform.

	Each widget inherits a function called repaint() that causes an
	immediate paintEvent.
Mon Aug 13 20:49:23 EDT 2007 J Phelps <godless@users.sf.net>
	* Minimum changes required to compile against Qt 4.
	Due to many, many differences in not only the
	signatures of the interfaces, but in how they work,
	the program is now barely usable.

	Files affected:
	cheeetracker/interface__QT/ample_edit.cpp
	cheeetracker/interface__QT/ample_edit.h
	cheeetracker/interface__QT/ample_intrument_table.cpp
	cheeetracker/interface__QT/ample_intrument_table.h
	cheeetracker/interface__QT/ample_player_fdialog.cpp
	cheeetracker/interface__QT/ample_player_fdialog.h
	cheeetracker/interface__QT/etting_window.cpp
	cheeetracker/interface__QT/etting_window.h
	cheeetracker/interface__QT/interface.cpp
	cheeetracker/interface__QT/interface.h
	cheeetracker/interface__QT/intrument_edit.cpp
	cheeetracker/interface__QT/intrument_edit.h
	cheeetracker/interface__QT/mdi_main_window.cpp
	cheeetracker/interface__QT/mdi_main_window.h
	cheeetracker/interface__QT/order_and_default_editor.cpp
	cheeetracker/interface__QT/order_and_default_editor.h
	cheeetracker/interface__QT/orderlit_edit.cpp